Replace jasmine with jest

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <title>Jasmine Spec Runner v3.2.1</title>
@@ -15,10 +16,11 @@
   <script src="primeFactors.js"></script>
 
   <!-- include spec files here... -->
-  <script src="spec/primeFactorsSpec.js"></script>
+  <script src="spec/primeFactors.spec.js"></script>
 
 </head>
 
 <body>
 </body>
+
 </html>
